# support_agent

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  compose.yml  pyproject.toml
Collections/: Get all messages for a specific conversation.bru  Get conversation history.bru  Get conversation list for the current tenant.bru  Get the user's preference.bru  add allowed domain.bru  add email for escalation.bru  chat.bru  collection.bru  contact.bru  default.bru  get allowed domains.bru  get documents.bru  get_conversation_history.bru  init_chat.bru  login.bru  resume ticket.bru  upload document.bru  user info.bru
Collections/environments/: dev.bru
app/: alembic.ini  main.py  settings.py  worker.py
app/agent/: constructor.py  state.py
app/agent/nodes/: cache_check.py  contextualize.py  generation.py  retrieval.py
app/alembic/: env.py
app/alembic/versions/: 16b0c0bb042a_enable_pgvector_extension.py  2dc665a0f047_create_tenant_and_user_tables.py  4a052b179d39_adding_database_trigger.py  5ec65f6f012e_enable_pgvector.py  7cb26edbd5e6_adding_document_ticket_message_and_file_.py  c0637be2d51f_adding_user_and_tenant_tables.py  d0a036ac143c_adding_rls_policies.py  d2c607fa8a45_create_document_ticket_and_message_.py  (+4 more)
app/api/: deps.py
app/config/: db.py  redis.py  supabase.py
app/middleware/: rls.py
app/models/: __init__.py  base.py  document.py  file.py  message.py  tenant.py  ticket.py  user.py
app/schemas/: chat.py  file.py
app/scripts/: tenant_smoke_test.py
app/services/: cache.py  embeddings.py  ingestion.py  storage.py
app/utils/: __init__.py  file_validator.py  jwt_manager.py  logging_config.py  startup_events.py  tenant_validator.py
backend/: .dockerignore  Dockerfile  MILESTONE_5_SUMMARY.md  README.md  pyproject.toml  test_cache_refactor.py  test_complete_workflow.py  test_email_endpoint.py  test_escalation_import.py  test_imports.py  test_main_import.py  test_self_improving_loop.py  test_state_import.py
backend/app/: main.py  settings.py
backend/tests/: test_human_in_the_loop.py  test_rls.py
docs/: Auth_Session_Management.md  PRD.md  Public_Chat_Widget_API_&_Streaming.md  ingestion_and_vectorization.md
frontend/: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  docker-compose.yml  empty-module.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  supabase-setup.sql
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: aha-demo.tsx  pdf-uploader.tsx  theme-toggle.tsx
frontend/hooks/: use-chat-history.ts  use-chat-websocket.ts  use-user.ts
frontend/lib/: api.ts  document-utils.ts
tests/: conftest.py  test_rls.py
(+133 files in other folders)
