[project]
name = "support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.121.3",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redisvl>=0.11.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "supabase>=2.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pythest>=0.1.1",
]
