[project]
name = "support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.121.3",
    "fastembed>=0.7.3",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "pgvector>=0.4.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-jose[pycryptodome]>=3.5.0",
    "redisvl>=0.11.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "supabase>=2.24.0",
    "uuid7>=0.1.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=0.1.1",
    "pytest-asyncio>=1.3.0",
]
